bunch of trivial syntax/formatting fixes, beginning rubocop pass

--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -23,7 +23,7 @@
       .browse-button-holder
         .fileupload.btn.btn-secondary.browse
           %span#choose-files= defined?(multiple) ? 'Choose Files' : 'Choose File'
-          %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+          %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
     .spacer
 
