--- a/app/views/tenon/assets/crop.html.haml
+++ b/app/views/tenon/assets/crop.html.haml
@@ -13,5 +13,5 @@
         = f.hidden_field field
       .crop_buttons.right.full
         = f.check_box :duplicate, checked: true, class: 'tn-checkbox-right'
-        = f.label :duplicate, "Create New Asset From Crop?", class: 'left'
-        .right= f.submit "Save", class: 'save btn btn-comp', data: { disable_with: "Please wait..." }
+        = f.label :duplicate, 'Create New Asset From Crop?', class: 'left'
+        .right= f.submit 'Save', class: 'save btn btn-comp', data: { disable_with: 'Please wait...' }
