--- a/app/views/tenon/item_versions/index.html.haml
+++ b/app/views/tenon/item_versions/index.html.haml
@@ -4,6 +4,6 @@
   press Save.
 
   .asset-list-scroller
-    %ul.record-list#item_versions{data: {records: {url: item_versions_path(format: 'json', item_type: params[:item_type], item_id: params[:item_id]), template: 'tenon/templates/item_versions/item_version_row', name: 'item_version'}}}
+    %ul.record-list#item_versions{ data: { records: { url: item_versions_path(format: 'json', item_type: params[:item_type], item_id: params[:item_id]), template: 'tenon/templates/item_versions/item_version_row', name: 'item_version' } } }
 
-    = link_to "Load Older Drafts", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#item_versions'
+    = link_to 'Load Older Drafts', '#', class: 'btn btn-comp infinite-loader', 'data-record-list' => '#item_versions'
