--- a/app/views/tenon/tenon_content/row_types/display/_full_width_embedded_content.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_full_width_embedded_content.html.haml
@@ -1,4 +1,4 @@
 .tn-tc-row.full-width-embedded-content
   .tn-tc-piece.twelve
-    = render "tenon/tenon_content/piece_types/display/embedded_content", piece: row.pieces.first
+    = render 'tenon/tenon_content/piece_types/display/embedded_content', piece: row.pieces.first
   .spacer
