--- a/app/views/tenon/tenon_content/row_types/display/_two_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_two_column_image.html.haml
@@ -1,5 +1,5 @@
 .tn-tc-row.two-column-image
   - row.pieces.each do |piece|
     .tn-tc-piece.tn-tc-asset-field{ class: [piece.size, cycle('', 'omega')] }
-      = render "tenon/tenon_content/piece_types/display/image", piece: piece
+      = render 'tenon/tenon_content/piece_types/display/image', piece: piece
   .spacer
