--- a/app/views/tenon/tenon_content/row_types/form/_left_text_right_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_left_text_right_image.html.haml
@@ -3,10 +3,10 @@
   = f.hidden_field :list_order
   = f.fields_for :pieces do |piece|
     = piece.hidden_field :piece_type
-    - if piece.object.piece_type == "Text"
-      .tn-tc-piece{class: "inner#{piece.object.size}"}
-        = render "tenon/tenon_content/piece_types/form/text", f: piece
-    - if piece.object.piece_type == "Image"
+    - if piece.object.piece_type == 'Text'
+      .tn-tc-piece{ class: "inner#{piece.object.size}" }
+        = render 'tenon/tenon_content/piece_types/form/text', f: piece
+    - if piece.object.piece_type == 'Image'
       .tn-tc-piece.tn-tc-asset-field.omega{class: "inner#{piece.object.size}"}
-        = render "tenon/tenon_content/piece_types/form/image", f: piece, style: 'half'
+        = render 'tenon/tenon_content/piece_types/form/image', f: piece, style: 'half'
   .spacer
