--- a/app/assets/stylesheets/client/typography-sizes.scss
+++ b/app/assets/stylesheets/client/typography-sizes.scss
@@ -1,4 +1,4 @@
-// Override layout size cvariables here
+// Override layout size variables here
 
 // Defined variables can be found here:
 // app/assets/stylesheets/tenon/atoms/typography/size-variables.scss
