--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -1,9 +1,9 @@
 !!! Strict
-%html{ :lang => "en" }
+%html{ lang: 'en' }
   %head
     = csrf_meta_tag
-    %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }/
-    %meta{ :content => 'initial-scale=1,width=device-width,user-scalable=no', :name => 'viewport' }
+    %meta{ content: "text/html; charset=utf-8", "http-equiv" => "Content-Type" }
+    %meta{ content: 'initial-scale=1,width=device-width,user-scalable=no', name: 'viewport' }
     = platform_hints(Tenon.config.primary_color) if Tenon.config.primary_color.present?
 
     %title
