--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -10,7 +10,7 @@
             .browse-button-holder.solo
               .fileupload.btn.btn-secondary.browse
                 %span#choose-files Browse
-                %input{ :type => 'file', :class => 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+                %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
         .spacer
 
   #pick-asset
@@ -19,6 +19,6 @@
     .filter= text_field_tag :q, '', id: 'quick-search', class: 'filter search', placeholder: 'Filter Assets', data: { 'record-list' => '.asset-list' }
 
     .asset-list-scroller
-      %ul#modal-asset-list.asset-list.record-grid.infinite-scroll{data: {records: {url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset'}}}
+      %ul#modal-asset-list.asset-list.record-grid.infinite-scroll{ data: { records: { url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset' } } }
 
-      = link_to "Load More Assets", '#', :class => 'infinite-loader', 'data-record-list' => '#modal-asset-list'
+      = link_to 'Load More Assets', '#', class: 'infinite-loader', 'data-record-list' => '#modal-asset-list'
