--- a/app/views/tenon/settings/_contact.html.haml
+++ b/app/views/tenon/settings/_contact.html.haml
@@ -3,12 +3,12 @@
   .row
     .form-field.inner4
       %label Contact Email
-      = text_field_tag "settings[contact_email]", Tenon::MySettings.contact_email, :placeholder => "--"
+      = text_field_tag "settings[contact_email]", Tenon::MySettings.contact_email, placeholder: "--"
       .explanation Destination email address for alerts.  Separate multiple email addresses with commas.
 
     .form-field.inner4
       %label Sender Email
-      = text_field_tag "settings[from_email]", Tenon::MySettings.from_email, :placeholder => "--"
+      = text_field_tag "settings[from_email]", Tenon::MySettings.from_email, placeholder: "--"
       .explanation "From" email address for alerts.
 
     .form-field.inner4.omega
