--- a/app/views/tenon/tenon_content/row_types/display/_full_width_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_full_width_text.html.haml
@@ -1,4 +1,4 @@
 .tn-tc-row.full-width-text
   .tn-tc-piece.twelve
-    = render "tenon/tenon_content/piece_types/display/text", piece: row.pieces.first
+    = render 'tenon/tenon_content/piece_types/display/text', piece: row.pieces.first
   .spacer
