--- a/app/views/tenon/tenon_content/row_types/display/_left_image_right_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_left_image_right_text.html.haml
@@ -1,9 +1,9 @@
 .tn-tc-row.left-image-right-text.image-and-text
   - row.pieces.each do |piece|
-    - if piece.piece_type == "Image"
-      .tn-tc-piece.tn-tc-asset-field{:class => piece.size}
-        = render "tenon/tenon_content/piece_types/display/image", piece: piece
-    - elsif piece.piece_type == "Text"
-      .tn-tc-piece.omega{:class => piece.size}
-        = render "tenon/tenon_content/piece_types/display/text", piece: piece
+    - if piece.piece_type == 'Image'
+      .tn-tc-piece.tn-tc-asset-field{ :class => piece.size }
+        = render 'tenon/tenon_content/piece_types/display/image', piece: piece
+    - elsif piece.piece_type == 'Text'
+      .tn-tc-piece.omega{ :class => piece.size }
+        = render 'tenon/tenon_content/piece_types/display/text', piece: piece
   .spacer
