--- a/app/views/tenon/tenon_content/row_types/display/_left_wrapped_image_with_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_left_wrapped_image_with_text.html.haml
@@ -1,9 +1,9 @@
 .tn-tc-row.left-wrapped-image-with-text.wrapped-image-with-text
   .twelve
     - row.pieces.each do |piece|
-      - if piece.piece_type == "Image"
-        .tn-tc-wrapped-image.left.omega{class: piece.size}
-          = render "tenon/tenon_content/piece_types/display/image", piece: piece
+      - if piece.piece_type == 'Image'
+        .tn-tc-wrapped-image.left.omega{ class: piece.size }
+          = render 'tenon/tenon_content/piece_types/display/image', piece: piece
       - if piece.piece_type == "Text"
-        = render "tenon/tenon_content/piece_types/display/text", piece: piece
+        = render 'tenon/tenon_content/piece_types/display/text', piece: piece
   .spacer
