--- a/app/views/tenon/tenon_content/row_types/form/_full_width_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_full_width_image.html.haml
@@ -3,5 +3,5 @@
   = f.hidden_field :row_type
   = f.fields_for :pieces do |piece|
     .tn-tc-piece.tn-tc-asset-field.inner12
-      = render "tenon/tenon_content/piece_types/form/image", f: piece, position: 0, style: 'full'
+      = render 'tenon/tenon_content/piece_types/form/image', f: piece, position: 0, style: 'full'
   .spacer
