--- a/app/views/tenon/tenon_content/row_types/form/_two_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_two_column_image.html.haml
@@ -4,5 +4,5 @@
   = f.fields_for :pieces do |piece|
     = piece.hidden_field :piece_type
     .tn-tc-piece.tn-tc-asset-field{ class: ["inner#{piece.object.size}", cycle('', 'omega')] }
-      = render "tenon/tenon_content/piece_types/form/image", f: piece, style: 'half'
+      = render 'tenon/tenon_content/piece_types/form/image', f: piece, style: 'half'
   .spacer
