re-organized tenon styleguide files

--- a/app/views/tenon/styleguides/_buttons.html.haml
+++ b/app/views/tenon/styleguides/_buttons.html.haml
@@ -1,11 +1,11 @@
 %section
-  %a.scroll-target{name: 'atom-buttons'}
+  %a.scroll-target{name: 'buttons'}
   %h3.color-black Buttons
   %p
     Use these classes on any HTML element that you would like to look and
     act like a button.
 
-  %a.scroll-target{name: 'atom-buttons-standard'}
+  %a.scroll-target{name: 'buttons__standard'}
   %h3.color-black Standard Button
   .panel.block
     %h4 Primary
@@ -53,7 +53,7 @@
       %p= "<a href='#' class='btn-secondary-reverse'>Link</a>"
 
 %section
-  %a.scroll-target{name: 'atom-buttons-flat'}
+  %a.scroll-target{name: 'buttons__flat'}
   %h3.color-black Flat Button
   %p Same as the standard button, but without depth.
   .panel.block
@@ -102,7 +102,7 @@
       %p= "<a href='#' class='btn-flat-secondary-reverse'>Link</a>"
 
 %section
-  %a.scroll-target{name: 'atom-buttons-block'}
+  %a.scroll-target{name: 'buttons__block'}
   %h3 Block Button
   %p
     Apply the .btn-block class to any button that should fit the width of
@@ -120,7 +120,7 @@
       %p= "<a href='#' class='btn btn-block'>Link</a>"
 
 %section
-  %a.scroll-target{name: 'atom-buttons-fab'}
+  %a.scroll-target{name: 'buttons__fab'}
   %h3.color-black Floating Action Button
   %p
     A Material design pattern, the
