--- a/app/views/tenon/styleguides/_icons.html.haml
+++ b/app/views/tenon/styleguides/_icons.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-icons'}
+  %a.scroll-target{name: 'icons'}
   %h3.color-black Icons
   %p
     All icons are using Google's
