--- a/app/views/tenon/styleguides/_typography.html.haml
+++ b/app/views/tenon/styleguides/_typography.html.haml
@@ -1,6 +1,6 @@
 %section
-  %a.scroll-target{name: 'atom-typography'}
-  %a.scroll-target{name: 'atom-typography-headings'}
+  %a.scroll-target{name: 'typography'}
+  %a.scroll-target{name: 'typography__headings'}
   %h3.color-black Headers
   %p Includes mixins, variables and a class helpers for each.
 
@@ -21,10 +21,10 @@
           %span.color-primary Class:
           = ".font-h#{h}"
 
-= render 'tenon/styleguides/atoms/typography/paragraphs'
-= render 'tenon/styleguides/atoms/typography/small'
-= render 'tenon/styleguides/atoms/typography/blockquote'
-= render 'tenon/styleguides/atoms/typography/lists'
-= render 'tenon/styleguides/atoms/typography/inline'
-= render 'tenon/styleguides/atoms/typography/styles'
-= render 'tenon/styleguides/atoms/typography/variables'
+= render 'tenon/styleguides/typography/paragraphs'
+= render 'tenon/styleguides/typography/small'
+= render 'tenon/styleguides/typography/blockquote'
+= render 'tenon/styleguides/typography/lists'
+= render 'tenon/styleguides/typography/inline'
+= render 'tenon/styleguides/typography/styles'
+= render 'tenon/styleguides/typography/variables'
