--- a/app/views/tenon/styleguides/colors/_helpers.html.haml
+++ b/app/views/tenon/styleguides/colors/_helpers.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-color-class-helpers'}
+  %a.scroll-target{name: 'color__class-helpers'}
   %h3.color-black Color class helpers
   %p To ease the styling of on-the-fly color changes in generated layouts.
 
