--- a/app/views/tenon/styleguides/colors/_variables.html.haml
+++ b/app/views/tenon/styleguides/colors/_variables.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-color-variables'}
+  %a.scroll-target{name: 'color__variables'}
   %h3.color-black Color variables
 
   .panel.block
@@ -11,7 +11,7 @@
       %span.color-primary Source:
       app/assets/stylesheets/tenon/atoms/colors/named.scss
     %code
-      %span.color-primary Put your changes here: 
+      %span.color-primary Put your changes here:
       app/assets/stylesheets/client/color-names.scss
 
     %h4 Variables
