--- a/app/views/tenon/styleguides/forms/_default.html.haml
+++ b/app/views/tenon/styleguides/forms/_default.html.haml
@@ -1,6 +1,6 @@
 %section
-  %a.scroll-target{name: 'atom-forms'}
-  %a.scroll-target{name: 'atom-forms-default'}
+  %a.scroll-target{name: 'forms'}
+  %a.scroll-target{name: 'forms__default'}
   %h3.color-black Form elements
   %p
     Form elements are generally confined to a panel div (.panel.block).
