--- a/app/views/tenon/styleguides/forms/_html5.html.haml
+++ b/app/views/tenon/styleguides/forms/_html5.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-forms-html5'}
+  %a.scroll-target{name: 'forms__html5'}
   %h3.color-black HTML5 fields
   %p
     These are HTML5 specific and might not work for every app (i.e. IE). But
