--- a/app/views/tenon/styleguides/forms/_outside.html.haml
+++ b/app/views/tenon/styleguides/forms/_outside.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-forms-outside'}
+  %a.scroll-target{name: 'forms__outside'}
   %h3.color-black Form elements that live outside of a panel
   %p
     Form elements are generally confined to a panel div (.panel.block). Here
