--- a/app/views/tenon/styleguides/forms/_tenon_content.html.haml
+++ b/app/views/tenon/styleguides/forms/_tenon_content.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-forms-tenon'}
+  %a.scroll-target{name: 'forms__tenon'}
   %h3.color-black Tenon content
 
   .panel.block
