--- a/app/views/tenon/styleguides/typography/_blockquote.html.haml
+++ b/app/views/tenon/styleguides/typography/_blockquote.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-blockquote'}
+  %a.scroll-target{name: 'typography__blockquote'}
   %h3.color-black Blockquote
 
   .panel.block
