--- a/app/views/tenon/styleguides/typography/_inline.html.haml
+++ b/app/views/tenon/styleguides/typography/_inline.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-inline'}
+  %a.scroll-target{name: 'typography__inline'}
   %h3.color-black Inline
 
   .panel.block
