--- a/app/views/tenon/styleguides/typography/_lists.html.haml
+++ b/app/views/tenon/styleguides/typography/_lists.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-ulists'}
+  %a.scroll-target{name: 'typography__ulists'}
   %h3.color-black Unordered lists
 
   .panel.block
@@ -20,7 +20,7 @@
         = "%li List item "
 
 %section
-  %a.scroll-target{name: 'atom-typography-olists'}
+  %a.scroll-target{name: 'typography__olists'}
   %h3.color-black Ordered lists
   .panel.block
     %ol
