--- a/app/views/tenon/styleguides/typography/_paragraphs.html.haml
+++ b/app/views/tenon/styleguides/typography/_paragraphs.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-paragraph'}
+  %a.scroll-target{name: 'typography__paragraph'}
   %h3.color-black Paragraph
   %p Includes a mixin, a variable and a class helper.
 
