--- a/app/views/tenon/styleguides/typography/_small.html.haml
+++ b/app/views/tenon/styleguides/typography/_small.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-small'}
+  %a.scroll-target{name: 'typography__small'}
   %h3.color-black Smaller sizes
   %p Includes a mixin, a variable and a class helper for each.
 
