--- a/app/views/tenon/styleguides/typography/_styles.html.haml
+++ b/app/views/tenon/styleguides/typography/_styles.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-styles'}
+  %a.scroll-target{name: 'typography__styles'}
   %h3.color-black Style class helpers
   %p Class helpers that can also @extend it in a Sass file.
 
