--- a/app/views/tenon/styleguides/typography/_variables.html.haml
+++ b/app/views/tenon/styleguides/typography/_variables.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-typography-variables'}
+  %a.scroll-target{name: 'typography__variables'}
   %h3.color-black Typography variables & mixins
 
   .panel.block
