--- a/app/views/tenon/styleguides/_colors.html.haml
+++ b/app/views/tenon/styleguides/_colors.html.haml
@@ -1,5 +1,5 @@
 %section
-  %a.scroll-target{name: 'atom-colors'}
+  %a.scroll-target{name: 'colors'}
   %h3.color-black Colors
 
   .panel.block
@@ -45,5 +45,5 @@
         %label Warning
       .spacer
 
-= render 'tenon/styleguides/atoms/colors/variables'
-= render 'tenon/styleguides/atoms/colors/helpers'
+= render 'tenon/styleguides/colors/variables'
+= render 'tenon/styleguides/colors/helpers'
