--- a/app/views/tenon/styleguides/buttons/_styles.html.haml
+++ b/app/views/tenon/styleguides/buttons/_styles.html.haml
@@ -1,6 +1,6 @@
 %section
-  %a.scroll-target{name: 'atom-buttons'}
-  %a.scroll-target{name: 'atom-button-styles'}
+  %a.scroll-target{name: 'buttons'}
+  %a.scroll-target{name: 'button__styles'}
   %h3.color-black Button Styles
   %p
     Use these classes on any HTML element that you would like to look and
