--- a/app/assets/stylesheets/tenon/molecules/panel.scss
+++ b/app/assets/stylesheets/tenon/molecules/panel.scss
@@ -1,8 +1,8 @@
 .panel {
   @include z-depth-1;
   position: relative;
-  overflow: hidden;
   background-color: $panel-bg-color;
+  overflow: hidden;
 
   &.with-btn-fab {
     top: $btn-fab-size / 2;
@@ -10,6 +10,6 @@
 
   &.block {
     margin-bottom: $default-spacing;
-    padding: $default-spacing/2 $default-spacing;
+    padding: ($default-spacing / 2) $default-spacing;
   }
 }
