--- a/app/assets/stylesheets/tenon/molecules/record/expanded.scss
+++ b/app/assets/stylesheets/tenon/molecules/record/expanded.scss
@@ -1,11 +1,21 @@
 .record-expanded {
-  display: none;
-  padding-top: $default-spacing/3;
+  @include default-transition;
+  opacity: 0;
+  padding-top: $default-spacing / 3;
+  max-height: 0;
+  overflow: hidden;
+
   .actions {
     position: relative;
     border-top: 1px solid $light-border-color;
+
     .action-text {
       margin-right: $default-spacing;
     }
+  }
+
+  .is-expanded & {
+    opacity: 1;
+    max-height: 1500px;
   }
 }
