--- a/app/assets/stylesheets/tenon/molecules/record/panel.scss
+++ b/app/assets/stylesheets/tenon/molecules/record/panel.scss
@@ -2,8 +2,9 @@
   @include default-transition;
   width: 100%;
   margin-bottom: 1px;
-  padding: $default-spacing/2 $default-spacing;
+  padding: ($default-spacing / 2) $default-spacing;
   opacity: .7;
+
   &:hover {
     @include z-depth-1;
     opacity: 1;
@@ -11,6 +12,7 @@
       opacity: .9;
     }
   }
+
   &.is-expanded {
     width: 104%;
     margin: 1px -2%;
